--- a/Wrapsy/app/src/main/res/layout/activity_basket_card_information.xml
+++ b/Wrapsy/app/src/main/res/layout/activity_basket_card_information.xml
@@ -170,7 +170,7 @@
                 app:cardElevation="0dp">
 
                 <TextView
-                    android:id="@+id/confirm_button"
+                    android:id="@+id/tv_confirm_button"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@color/verdeOlivaGrisaceo"
