--- a/Wrapsy/app/src/main/res/layout/activity_basket_total.xml
+++ b/Wrapsy/app/src/main/res/layout/activity_basket_total.xml
@@ -78,6 +78,7 @@
                 android:gravity="center_horizontal">
 
                 <TextView
+                    android:id="@+id/tv_order_date"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/order_date"
@@ -86,51 +87,16 @@
                     android:layout_marginBottom="16dp" />
 
                 <LinearLayout
+                    android:id="@+id/ll_order_gifts"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:padding="16dp"
-                    android:elevation="2dp">
+                    android:orientation="vertical">
 
-                    <ImageView
-                        android:layout_width="80dp"
-                        android:layout_height="80dp"
-                        android:src="@drawable/rimel_costoso"
-                        android:layout_marginEnd="16dp" />
-
-                    <LinearLayout
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:orientation="vertical">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="@string/basket_total_gift"
-                            android:textStyle="bold"
-                            android:textSize="18sp"
-                            android:textColor="#333333" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="@string/basket_total_desc"
-                            android:textSize="14sp"
-                            android:textColor="#666666" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="@string/basket_total_total"
-                            android:textSize="18sp"
-                            android:textColor="#333333"
-                            android:textStyle="bold"
-                            android:layout_marginTop="8dp" />
-                    </LinearLayout>
                 </LinearLayout>
 
+
                 <TextView
+                    android:id="@+id/tv_total_price"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/basket_total_finale"
@@ -140,6 +106,7 @@
                     android:textColor="#333333"
                     android:layout_marginTop="16dp" />
 
+                <!--
                 <Spinner
                     android:layout_width="300dp"
                     android:layout_height="wrap_content"
@@ -147,7 +114,7 @@
 
                     android:background="@color/verdePastelSuave"
                     android:padding="8dp"
-                    android:spinnerMode="dropdown" />
+                    android:spinnerMode="dropdown" />-->
 
 
                 <androidx.cardview.widget.CardView
