--- a/Wrapsy/app/src/main/res/layout/top_navigation.xml
+++ b/Wrapsy/app/src/main/res/layout/top_navigation.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_width="match_parent"
+    android:layout_height="70dp"
+    android:padding="5dp"
+    android:layout_marginTop="5dp"
+    android:id="@+id/top_bar">
     <ImageView
         android:id="@+id/basketIcon"
         android:layout_width="40dp"
