--- a/Wrapsy/app/src/main/res/layout/activity_basket_card_confirmation.xml
+++ b/Wrapsy/app/src/main/res/layout/activity_basket_card_confirmation.xml
@@ -129,7 +129,7 @@
 
 
         <Button
-            android:id="@+id/btn_confirm"
+            android:id="@+id/btn_confirm_card"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Confirm"
