--- a/Wrapsy/app/src/main/res/layout/activity_basket_card_information.xml
+++ b/Wrapsy/app/src/main/res/layout/activity_basket_card_information.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@color/cremaPalido"
-    tools:context=".BasketCardConfirmationActivity">
+    tools:context=".BasketCardInformationActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -170,7 +170,7 @@
                 app:cardElevation="0dp">
 
                 <TextView
-                    android:id="@+id/tv_confirm_button"
+                    android:id="@+id/tv_confirm_card_info"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@color/verdeOlivaGrisaceo"
