--- a/Wrapsy/app/src/main/res/layout/item_purchased_gift.xml
+++ b/Wrapsy/app/src/main/res/layout/item_purchased_gift.xml
@@ -20,7 +20,7 @@
 
         <!-- Imagen del producto (Placeholder por defecto) -->
         <ImageView
-            android:id="@+id/iv_purchase"
+            android:id="@+id/iv_purchase_picture"
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:src="@drawable/heisenberg_plush"
