--- a/Wrapsy/app/src/main/res/layout/activity_save_item.xml
+++ b/Wrapsy/app/src/main/res/layout/activity_save_item.xml
@@ -123,7 +123,7 @@
         </LinearLayout>
     </LinearLayout>
     <include
-        android:layout="@layout/bottom_navigation"
+        layout="@layout/bottom_navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 </LinearLayout>
