--- a/Wrapsy/app/src/main/res/layout/activity_save_item_my_lists.xml
+++ b/Wrapsy/app/src/main/res/layout/activity_save_item_my_lists.xml
@@ -9,47 +9,10 @@
     tools:context=".SaveItemMyListsActivity">
 
     <!-- Barra superior con iconos -->
-    <RelativeLayout
+    <include
+        layout="@layout/top_navigation"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="16dp">
-
-        <ImageView
-            android:id="@+id/basketIcon"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_margin="5dp"
-            android:padding="8dp"
-            android:background="@drawable/circleyellow"
-            android:layout_alignParentStart="true"
-            android:layout_centerVertical="true"
-            android:src="@drawable/ic_shopping_basket"
-            android:contentDescription="Shopping basket" />
-
-        <ImageView
-            android:id="@+id/menuIcon"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_margin="5dp"
-            android:padding="8dp"
-            android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
-            android:background="@drawable/circleyellow"
-            android:src="@drawable/ic_notificaciones"
-            android:contentDescription="Notifications" />
-
-        <ImageView
-            android:id="@+id/options"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_margin="5dp"
-            android:padding="8dp"
-            android:layout_toStartOf="@id/menuIcon"
-            android:layout_centerVertical="true"
-            android:background="@drawable/circleyellow"
-            android:src="@drawable/ic_tres_rayitas"
-            android:contentDescription="Menu" />
-    </RelativeLayout>
+        android:layout_height="wrap_content"/>
 
     <!-- Contenido principal -->
     <LinearLayout
@@ -85,16 +48,16 @@
                 android:textStyle="bold" />
         </LinearLayout>
 
-        <!-- Botones -->
         <LinearLayout
             android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:orientation="vertical"
             android:layout_marginTop="50dp"
             android:background="@drawable/green_rounded_background_card"
+            android:orientation="vertical"
             android:paddingBottom="10dp">
 
+            <!-- TextView fijo fuera del contenedor dinámico -->
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -103,36 +66,18 @@
                 android:textColor="@android:color/white"
                 android:padding="16dp"/>
 
-            <Button
-                android:id="@+id/btn_seelater"
-                style="@style/WrapsyPurpleButton"
+            <!-- Contenedor para botones/mensajes -->
+            <LinearLayout
+                android:id="@+id/buttons_container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="See later"
-                android:layout_marginHorizontal="16dp"/>
-
-            <Button
-                android:id="@+id/btn_christmas"
-                android:layout_marginTop="4dp"
-                style="@style/WrapsyPurpleButton"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Christmas 2025 🎄"
-                android:layout_marginHorizontal="16dp"/>
-            <Button
-                android:id="@+id/btn_offers"
-                android:layout_marginTop="4dp"
-                style="@style/WrapsyPurpleButton"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Offers"
-                android:layout_marginHorizontal="16dp"/>
+                android:orientation="vertical"/>
 
         </LinearLayout>
 
     </LinearLayout>
     <include
-        android:layout="@layout/bottom_navigation"
+        layout="@layout/bottom_navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 </LinearLayout>
