--- a/Wrapsy/app/src/main/res/layout/item_gift.xml
+++ b/Wrapsy/app/src/main/res/layout/item_gift.xml
@@ -7,13 +7,13 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="120dp"
         android:orientation="vertical">
 
         <ImageView
             android:id="@+id/image_producto_cell"
             android:layout_width="80dp"
-            android:layout_height="match_parent"
+            android:layout_height="80dp"
             android:layout_gravity="center"
             android:scaleType="fitXY"
             android:src="@drawable/velvet_lipstick"/>
@@ -33,6 +33,7 @@
             android:layout_height="wrap_content"
             android:text="Lip velvet liquid lipstick"
             android:textSize="10sp"
+            android:textAlignment="center"
             android:layout_gravity="center"
             android:fontFamily="sans-serif-light"
             android:textColor="@color/black"
