--- a/Wrapsy/app/src/main/res/layout/activity_category_gift.xml
+++ b/Wrapsy/app/src/main/res/layout/activity_category_gift.xml
@@ -93,7 +93,7 @@
                 android:layout_height="wrap_content">
 
                 <EditText
-                    android:id="@+id/editTextText"
+                    android:id="@+id/search_bar"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:background="@color/white"
