--- a/Wrapsy/app/src/main/res/layout/activity_about_us.xml
+++ b/Wrapsy/app/src/main/res/layout/activity_about_us.xml
@@ -17,38 +17,12 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:layout_marginTop="15dp"
             android:orientation="vertical">
-            <RelativeLayout
-                android:id="@+id/top_bar"
+            <include
+                layout="@layout/top_navigation"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="16dp">
-
-                <ImageView
-                    android:id="@+id/basketIcon"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:layout_alignParentStart="true"
-                    android:layout_centerVertical="true"
-                    android:layout_margin="5dp"
-                    android:contentDescription="Shopping basket"
-                    android:padding="8dp"
-                    android:src="@drawable/ic_wrapsy" />
-
-                <ImageView
-                    android:id="@+id/menuIcon"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:layout_alignParentEnd="true"
-                    android:layout_centerVertical="true"
-                    android:layout_margin="5dp"
-                    android:background="@drawable/circleyellow"
-                    android:contentDescription="Menu"
-                    android:padding="8dp"
-                    android:src="@drawable/ic_notificaciones" />
-
-
-            </RelativeLayout>
+                android:layout_height="wrap_content"/>
 
             <TextView
                 android:layout_width="wrap_content"
