--- a/Wrapsy/app/src/main/res/layout/activity_stores.xml
+++ b/Wrapsy/app/src/main/res/layout/activity_stores.xml
@@ -19,48 +19,12 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:layout_marginTop="15dp"
             android:orientation="vertical">
-            <RelativeLayout
+            <include
+                layout="@layout/top_navigation"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="16dp">
-
-                <ImageView
-                    android:id="@+id/basketIcon"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:layout_margin="5dp"
-                    android:padding="8dp"
-                    android:background="@drawable/circleyellow"
-                    android:layout_alignParentStart="true"
-                    android:layout_centerVertical="true"
-                    android:src="@drawable/ic_shopping_basket"
-                    android:contentDescription="Shopping basket" />
-
-                <ImageView
-                    android:id="@+id/btn_notificaciones"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:layout_margin="5dp"
-                    android:padding="8dp"
-                    android:layout_alignParentEnd="true"
-                    android:layout_centerVertical="true"
-                    android:background="@drawable/circleyellow"
-                    android:src="@drawable/ic_notificaciones"
-                    android:contentDescription="Menu" />
-
-                <ImageView
-                    android:id="@+id/options"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:layout_margin="1dp"
-                    android:padding="8dp"
-                    android:layout_toStartOf="@id/btn_notificaciones"
-                    android:layout_centerVertical="true"
-                    android:background="@drawable/circleyellow"
-                    android:src="@drawable/ic_tres_rayitas"
-                    android:contentDescription="Options" />
-            </RelativeLayout>
+                android:layout_height="wrap_content"/>
 
 
             <LinearLayout
