--- a/Wrapsy/app/src/main/res/layout/activity_basket_card_information.xml
+++ b/Wrapsy/app/src/main/res/layout/activity_basket_card_information.xml
@@ -50,7 +50,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Payment Cards"
+                android:text="Gift Cards"
                 android:textSize="26sp"
                 android:textStyle="bold"
                 android:layout_marginBottom="24dp" />
