--- a/Wrapsy/app/src/main/res/layout/activity_more_options.xml
+++ b/Wrapsy/app/src/main/res/layout/activity_more_options.xml
@@ -54,7 +54,26 @@
             android:layout_height="wrap_content"
             android:paddingHorizontal="20dp">
 
+            <Button
+                android:id="@+id/btn_purchase_history"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Purchase History"
+                android:textColor="@color/black"
+                android:background="@drawable/edit_text_bg"
+                android:gravity="center_vertical|start"
+                android:padding="16dp" />
 
+            <Button
+                android:id="@+id/btn_payment_options"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/edit_text_bg"
+                android:text="Payment Options"
+                android:textColor="#000000"
+                android:gravity="center_vertical|start"
+                android:padding="16dp"
+                android:layout_marginTop="16dp" />
 
             <Button
                 android:id="@+id/btn_about_us"
